[gd_scene load_steps=24 format=4 uid="uid://bj4e03gbjjotf"]

[ext_resource type="Texture2D" uid="uid://b8ayv7kwqd0ix" path="res://Assets/TempDiffrentTiles/Group 5.png" id="1_kpxiq"]
[ext_resource type="PackedScene" uid="uid://yijb75sqliw3" path="res://Scenes/walkable_tile.tscn" id="1_tjjtq"]
[ext_resource type="PackedScene" uid="uid://sn2wqx0sucig" path="res://Scenes/border_tile.tscn" id="2_684eb"]
[ext_resource type="Texture2D" uid="uid://divfh4f1477fn" path="res://Assets/TempDiffrentTiles/Group 6.png" id="2_woqrp"]
[ext_resource type="Texture2D" uid="uid://kkjieww84dey" path="res://Assets/TempDiffrentTiles/Group 7.png" id="3_ehmie"]
[ext_resource type="PackedScene" uid="uid://c4qwwwqv0d5dc" path="res://Scenes/trap_tile.tscn" id="3_eio1i"]
[ext_resource type="PackedScene" uid="uid://dxwg4b4pdjf04" path="res://Scenes/power_up_tile.tscn" id="4_bqy0b"]
[ext_resource type="Texture2D" uid="uid://crioxjxe8plok" path="res://Assets/TempDiffrentTiles/Group 8.png" id="4_mhiml"]
[ext_resource type="Texture2D" uid="uid://kytmhqdow5wv" path="res://Assets/TempDiffrentTiles/Group 9.png" id="5_6gatv"]
[ext_resource type="PackedScene" uid="uid://c7cf5w0q7hos7" path="res://Scenes/wall_tile.tscn" id="5_66w1t"]
[ext_resource type="Script" uid="uid://ytn0ugco6m4q" path="res://Scripts/dynamic_tiles.gd" id="6_kpxiq"]
[ext_resource type="Texture2D" uid="uid://dppntjmnyywsx" path="res://Assets/warning.png" id="12_i7f56"]
[ext_resource type="AudioStream" uid="uid://bw745fq2glvyj" path="res://Assets/Audio/Weapon Missile 01.wav" id="13_6ra88"]

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_ucixn"]
resource_name = "Tiles"
scenes/1/scene = ExtResource("1_tjjtq")
scenes/2/scene = ExtResource("2_684eb")
scenes/3/scene = ExtResource("3_eio1i")
scenes/4/scene = ExtResource("4_bqy0b")
scenes/5/scene = ExtResource("5_66w1t")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_i7f56"]
texture = ExtResource("1_kpxiq")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6ra88"]
texture = ExtResource("2_woqrp")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_whtlx"]
texture = ExtResource("3_ehmie")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hgcrc"]
texture = ExtResource("4_mhiml")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xt5mu"]
texture = ExtResource("5_6gatv")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_5t706"]
tile_size = Vector2i(64, 64)
sources/1 = SubResource("TileSetAtlasSource_i7f56")
sources/2 = SubResource("TileSetAtlasSource_6ra88")
sources/3 = SubResource("TileSetAtlasSource_whtlx")
sources/4 = SubResource("TileSetAtlasSource_hgcrc")
sources/5 = SubResource("TileSetAtlasSource_xt5mu")
sources/0 = SubResource("TileSetScenesCollectionSource_ucixn")

[sub_resource type="AtlasTexture" id="AtlasTexture_6ra88"]
atlas = ExtResource("12_i7f56")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_whtlx"]
atlas = ExtResource("12_i7f56")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_hgcrc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ra88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whtlx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ra88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whtlx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ra88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whtlx")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="DynamicTiles" type="TileMapLayer"]
tile_map_data = PackedByteArray("AAAEAAAAAAAAAAAAAgAEAAEAAAAAAAAAAQADAAEAAAAAAAAAAQACAAEAAAAAAAAAAgACAAIAAAAAAAAAAQABAAIAAAAAAAAAAgABAAMAAAAAAAAAAQABAAQAAAAAAAAAAQAAAAQAAAAAAAAAAgAAAAUAAAAAAAAAAQAAAAYAAAAAAAAAAQAAAAcAAAAAAAAAAQAAAAgAAAAAAAAAAgABAAgAAAAAAAAAAQABAAkAAAAAAAAAAQABAAoAAAAAAAAAAgACAAoAAAAAAAAAAQACAAsAAAAAAAAAAgADAAsAAAAAAAAAAQAEAAsAAAAAAAAAAQAEAAwAAAAAAAAAAgAGAAcAAAAAAAAAAQAGAAYAAAAAAAAAAQAGAAUAAAAAAAAAAQAGAAQAAAAAAAAAAQAGAAMAAAAAAAAAAQAGAAIAAAAAAAAAAQAFAAEAAAAAAAAAAQAFAAIAAAAAAAAAAQAEAAIAAAAAAAAAAQADAAIAAAAAAAAAAQADAAMAAAAAAAAAAQACAAMAAAAAAAAAAQACAAQAAAAAAAAAAQACAAUAAAAAAAAAAQABAAUAAAAAAAAAAQABAAYAAAAAAAAAAQABAAcAAAAAAAAAAQACAAcAAAAAAAAAAQACAAYAAAAAAAAAAQADAAYAAAAAAAAAAQADAAUAAAAAAAAAAQADAAQAAAAAAAAAAQAEAAQAAAAAAAAAAQAFAAMAAAAAAAAAAQAFAAQAAAAAAAAAAQAFAAUAAAAAAAAAAQAEAAUAAAAAAAAAAQAEAAYAAAAAAAAAAQAEAAcAAAAAAAAAAQADAAcAAAAAAAAAAQADAAgAAAAAAAAAAQACAAgAAAAAAAAAAQACAAkAAAAAAAAAAQADAAkAAAAAAAAAAQADAAoAAAAAAAAAAQAEAAoAAAAAAAAAAQAEAAkAAAAAAAAAAQAEAAgAAAAAAAAAAQAFAAgAAAAAAAAAAQAFAAcAAAAAAAAAAQAFAAYAAAAAAAAAAQAFAAkAAAAAAAAAAQAFAAoAAAAAAAAAAQAFAAsAAAAAAAAAAQAGAAoAAAAAAAAAAQAGAAkAAAAAAAAAAQAGAAgAAAAAAAAAAQAHAAgAAAAAAAAAAQAHAAcAAAAAAAAAAQAHAAYAAAAAAAAAAQAHAAUAAAAAAAAAAQAHAAQAAAAAAAAAAQAHAAMAAAAAAAAAAQAHAAkAAAAAAAAAAQD//wQAAAAAAAAAAgD//wUAAAAAAAAAAgD//wYAAAAAAAAAAgD//wcAAAAAAAAAAgD//wgAAAAAAAAAAgAAAAMAAAAAAAAAAgAAAAIAAAAAAAAAAgABAAEAAAAAAAAAAgACAAAAAAAAAAAAAgADAAAAAAAAAAAAAgADAAwAAAAAAAAAAgACAAwAAAAAAAAAAgABAAsAAAAAAAAAAgAAAAoAAAAAAAAAAgAAAAkAAAAAAAAAAgAEAAMAAAAAAAAAAQD//wMAAAAAAAAAAgD//wkAAAAAAAAAAgADAP//AAAAAAAAAgADAA0AAAAAAAAAAgAEAP//AAAAAAAAAgAEAA0AAAAAAAAAAgAFAP//AAAAAAAAAgAFAA0AAAAAAAAAAgAGAP//AAAAAAAAAgAGAA0AAAAAAAAAAgAHAP//AAAAAAAAAgAHAA0AAAAAAAAAAgAIAP//AAAAAAAAAgAIAAAAAAAAAAAAAgAIAAwAAAAAAAAAAgAIAA0AAAAAAAAAAgAJAP//AAAAAAAAAgAJAAAAAAAAAAAAAgAJAAwAAAAAAAAAAgAJAA0AAAAAAAAAAgAKAAAAAAAAAAAAAgAKAAEAAAAAAAAAAgAKAAsAAAAAAAAAAgAKAAwAAAAAAAAAAgALAAEAAAAAAAAAAgALAAIAAAAAAAAAAgALAAoAAAAAAAAAAgALAAsAAAAAAAAAAgAMAAIAAAAAAAAAAgAMAAMAAAAAAAAAAgAMAAQAAAAAAAAAAgAMAAgAAAAAAAAAAgAMAAkAAAAAAAAAAgAMAAoAAAAAAAAAAgANAAMAAAAAAAAAAgANAAQAAAAAAAAAAgANAAUAAAAAAAAAAgANAAYAAAAAAAAAAgANAAcAAAAAAAAAAgANAAgAAAAAAAAAAgANAAkAAAAAAAAAAgAIAAYAAAAAAAAAAQAIAAUAAAAAAAAAAQAIAAcAAAAAAAAAAQAJAAYAAAAAAAAAAQAIAAQAAAAAAAAAAQAJAAUAAAAAAAAAAQAIAAgAAAAAAAAAAQAJAAcAAAAAAAAAAQAKAAYAAAAAAAAAAQAGAAEAAAAAAAAAAQAHAAIAAAAAAAAAAQAIAAMAAAAAAAAAAQAJAAQAAAAAAAAAAQAKAAUAAAAAAAAAAQAGAAsAAAAAAAAAAQAHAAoAAAAAAAAAAQAIAAkAAAAAAAAAAQAJAAgAAAAAAAAAAQAKAAcAAAAAAAAAAQALAAYAAAAAAAAAAQAGAAAAAAAAAAAAAQAHAAEAAAAAAAAAAQAIAAIAAAAAAAAAAQAJAAMAAAAAAAAAAQAKAAQAAAAAAAAAAQALAAUAAAAAAAAAAQAGAAwAAAAAAAAAAQAHAAsAAAAAAAAAAQAIAAoAAAAAAAAAAQAJAAkAAAAAAAAAAQAKAAgAAAAAAAAAAQALAAcAAAAAAAAAAQAMAAYAAAAAAAAAAQAHAAAAAAAAAAAAAQAFAAAAAAAAAAAAAQAIAAEAAAAAAAAAAQAJAAIAAAAAAAAAAQAKAAMAAAAAAAAAAQALAAQAAAAAAAAAAQAMAAUAAAAAAAAAAQAHAAwAAAAAAAAAAQAFAAwAAAAAAAAAAQAIAAsAAAAAAAAAAQAJAAoAAAAAAAAAAQAKAAkAAAAAAAAAAQALAAgAAAAAAAAAAQAMAAcAAAAAAAAAAQAJAAEAAAAAAAAAAQAKAAIAAAAAAAAAAQALAAMAAAAAAAAAAQAJAAsAAAAAAAAAAQAKAAoAAAAAAAAAAQALAAkAAAAAAAAAAQA=")
tile_set = SubResource("TileSet_5t706")
script = ExtResource("6_kpxiq")

[node name="TrapTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="ShrinkingTimer" type="Timer" parent="."]
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="warning" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_hgcrc")
frame = 4
frame_progress = 0.389021

[node name="sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_6ra88")

[connection signal="timeout" from="TrapTimer" to="." method="_on_trap_timer_timeout"]
[connection signal="timeout" from="ShrinkingTimer" to="." method="_on_shrinking_timer_timeout"]
